tests/sksl/errors/CanExitWithoutReturningValue.glsl
### Compilation failed:

error: 4: function 'is_detected' exits without returning a value
1 error
